BasicPL/Grammar.txt
expr		: KEYWORD:VAR|LET IDENTIFIER EQ expr
			: comp-expr ((KEYWORD:AND|KEYOWRD:OR) comp-expr)*

comp-expr	: NOT comp-expr
			: arith-expr ((EE|GT|LT|GTE|LTE) arith-expr)*

arith-expr	: term ((PLUS|MINUS) term)*

term		: factor ((MUL|DIV) factor)*

factor		: (PLUS|MINUS) factor
			: power

power		: atom (POW factor)*

atom		: INT|FLOAT|IDENTIFIER
			: LPAREN expr RPAREN
